test(actionbuttons): use html helper in visual tests

--- a/tests/visual/src/misc/action-buttons.html
+++ b/tests/visual/src/misc/action-buttons.html
@@ -21,14 +21,14 @@
         <span>start</span>
         <span>end</span>
         <div>
-            <div class="k-actions k-actions-start">
+            <div is="ActionButtons" alignment="start">
                 <button is="Button">First</button>
                 <button is="Button">Second</button>
                 <button is="Button">Third</button>
             </div>
         </div>
         <div>
-            <div class="k-actions k-actions-end">
+            <div is="ActionButtons" alignment="end">
                 <button is="Button">First</button>
                 <button is="Button">Second</button>
                 <button is="Button">Third</button>
@@ -38,14 +38,14 @@
         <span>center</span>
         <span>stretch</span>
         <div>
-            <div class="k-actions k-actions-center">
+            <div is="ActionButtons" alignment="center">
                 <button is="Button">First</button>
                 <button is="Button">Second</button>
                 <button is="Button">Third</button>
             </div>
         </div>
         <div>
-            <div class="k-actions k-actions-stretched">
+            <div is="ActionButtons" alignment="stretched">
                 <button is="Button">First</button>
                 <button is="Button">Second</button>
                 <button is="Button">Third</button>
@@ -55,14 +55,14 @@
         <span>rtl start</span>
         <span>rtl end</span>
         <div dir="rtl">
-            <div class="k-actions k-actions-start">
+            <div is="ActionButtons" alignment="start">
                 <button is="Button">First</button>
                 <button is="Button">Second</button>
                 <button is="Button">Third</button>
             </div>
         </div>
         <div dir="rtl">
-            <div class="k-actions k-actions-end">
+            <div is="ActionButtons" alignment="end">
                 <button is="Button">First</button>
                 <button is="Button">Second</button>
                 <button is="Button">Third</button>
@@ -72,14 +72,14 @@
         <span>rtl center</span>
         <span>rtl stretch</span>
         <div dir="rtl">
-            <div class="k-actions k-actions-center">
+            <div is="ActionButtons" alignment="center">
                 <button is="Button">First</button>
                 <button is="Button">Second</button>
                 <button is="Button">Third</button>
             </div>
         </div>
         <div dir="rtl">
-            <div class="k-actions k-actions-stretched">
+            <div is="ActionButtons" alignment="stretched">
                 <button is="Button">First</button>
                 <button is="Button">Second</button>
                 <button is="Button">Third</button>
