--- a/tests/visual/src/misc/card-custom.html
+++ b/tests/visual/src/misc/card-custom.html
@@ -27,7 +27,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions k-actions-vertical k-actions-stretched">
+            <div is="ActionButtons" class="k-card-actions" alignment="stretched" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -42,7 +42,7 @@
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
                 <span class="k-separator"></span>
-                <div class="k-card-actions k-actions k-actions-stretched">
+                <div is="ActionButtons" class="k-card-actions" alignment="stretched">
                     <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                     <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
                 </div>
@@ -61,7 +61,7 @@
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
                 <span class="k-separator"></span>
-                <div class="k-card-actions k-actions k-actions-stretched">
+                <div is="ActionButtons" class="k-card-actions" alignment="stretched">
                     <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                     <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
                 </div>
@@ -76,7 +76,7 @@
                 <div class="k-display-2">2&deg;C</div>
             </div>
             <span class="k-separator"></span>
-            <div class="k-card-actions k-action k-actions-stretched">
+            <div is="ActionButtons" class="k-card-actions" alignment="stretched">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
