--- a/tests/visual/src/misc/card-layout-vertical.html
+++ b/tests/visual/src/misc/card-layout-vertical.html
@@ -25,7 +25,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
-            <div class="k-card-actions k-actions k-actions-start">
+            <div is="ActionButtons" class="k-card-actions" alignment="start">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -38,7 +38,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
-            <div class="k-card-actions k-actions k-actions-center">
+            <div is="ActionButtons" class="k-card-actions" alignment="center">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -51,7 +51,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
-            <div class="k-card-actions k-actions k-actions-end">
+            <div is="ActionButtons" class="k-card-actions" alignment="end">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -64,7 +64,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
-            <div class="k-card-actions k-actions k-actions-stretched">
+            <div  is="ActionButtons" class="k-card-actions" alignment="stretched">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
