--- a/tests/visual/src/misc/card.html
+++ b/tests/visual/src/misc/card.html
@@ -30,7 +30,7 @@
             <div class="k-card-body">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions">
+            <div is="ActionButtons" class="k-card-actions">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -42,7 +42,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions k-actions-vertical">
+            <div is="ActionButtons" class="k-card-actions" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -54,7 +54,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions k-actions-stretched">
+            <div is="ActionButtons" class="k-card-actions" alignment="stretched">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -66,7 +66,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions k-actions-vertical k-actions-stretched">
+            <div is="ActionButtons" class="k-card-actions" alignment="stretched" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -80,7 +80,7 @@
             <div class="k-card-body">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions">
+            <div is="ActionButtons" class="k-card-actions">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -93,7 +93,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions k-actions-vertical">
+            <div is="ActionButtons" class="k-card-actions" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -106,7 +106,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <img class="k-card-image" />
-            <div class="k-card-actions k-actions k-actions-stretched">
+            <div is="ActionButtons" class="k-card-actions" alignment="stretched">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -118,7 +118,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions k-actions-vertical k-actions-stretched">
+            <div is="ActionButtons" class="k-card-actions" alignment="stretched" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
