--- a/tests/visual/src/misc/datetime-selector.html
+++ b/tests/visual/src/misc/datetime-selector.html
@@ -210,7 +210,8 @@
                                 <!-- omit -->
                             </div>
                         </div>
-                        <div class="k-datetime-footer k-actions k-actions-stretched">
+
+                        <div is="ActionButtons" class="k-datetime-footer" alignment="stretched">
                             <button is="Button" class="k-time-cancel">Cancel</button>
                             <button is="Button" themeColor="primary" class="k-time-accept">Set</button>
                         </div>
@@ -386,7 +387,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="k-datetime-footer k-actions k-actions-stretched">
+                        <div is="ActionButtons" class="k-datetime-footer" alignment="stretched">
                             <button is="Button" class="k-time-cancel">Cancel</button>
                             <button is="Button" themeColor="primary" class="k-time-accept">Set</button>
                         </div>
