--- a/tests/visual/src/misc/dialog-modal-angular.html
+++ b/tests/visual/src/misc/dialog-modal-angular.html
@@ -42,10 +42,10 @@
                     Dialog content template
                 </div>
 
-                <kendo-dialog-actions class="k-dialog-buttongroup k-actions k-actions-end">
+                <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                     <button is="Button">Action</button>
                     <button is="Button" themeColor="primary">Primary</button>
-                </kendo-dialog-actions>
+                </div>
             </div>
         </kendo-dialog>
 
