--- a/tests/visual/src/misc/dialog.html
+++ b/tests/visual/src/misc/dialog.html
@@ -41,7 +41,7 @@
                 Dialog content template
             </div>
 
-            <div class="k-dialog-buttongroup k-actions k-actions-end">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -62,7 +62,7 @@
                 Dialog without titlebar actions
             </div>
 
-            <div class="k-dialog-buttongroup k-actions k-actions-end">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -82,7 +82,7 @@
                 Dialog with empty title and actions
             </div>
 
-            <div class="k-dialog-buttongroup k-actions k-actions-end">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -107,7 +107,7 @@
                 Dialog without title
             </div>
 
-            <div class="k-dialog-buttongroup k-actions k-actions-end">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -128,7 +128,7 @@
                 <p>Dialog content template with long text and vertical scrolling.</p>
             </div>
 
-            <div class="k-dialog-buttongroup k-actions k-actions-end">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
