--- a/tests/visual/src/misc/editor-dialog-view-source.html
+++ b/tests/visual/src/misc/editor-dialog-view-source.html
@@ -35,7 +35,7 @@
                 <div class="k-window-content">
                     <textarea is="Textarea" class="k-editor-textarea"></textarea>
                 </div>
-                <div class="k-window-buttons k-actions k-actions-end">
+                <div is="ActionButtons" class="k-window-buttons" alignment="end">
                     <button is="Button">Cancel</button>
                     <button is="Button" themeColor="primary">Update</button>
                 </div>
