--- a/tests/visual/src/misc/editor-find-replace.html
+++ b/tests/visual/src/misc/editor-find-replace.html
@@ -128,7 +128,7 @@
                                     </div>
                                 </div>
                                 <div class="k-form-field">
-                                    <div class="k-actions k-actions-horizontal k-actions-end">
+                                    <div is="ActionButtons" alignment="end">
                                         <button is="Button">Replace</button>
                                         <button is="Button">Replace All</button>
                                     </div>
