--- a/tests/visual/src/misc/grid-editing-popup.html
+++ b/tests/visual/src/misc/grid-editing-popup.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="k-window-buttons k-actions k-actions-end">
+                <div is="ActionButtons"  class="k-window-buttons" alignment="end">
                     <button is="Button">Cancel</button>
                     <button is="Button" themeColor="primary">Update</button>
                 </div>
