--- a/tests/visual/src/misc/pivotgrid-settings-panel-horizontal.html
+++ b/tests/visual/src/misc/pivotgrid-settings-panel-horizontal.html
@@ -93,7 +93,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="k-pivotgrid-configurator-actions k-actions k-actions-end">
+                    <div is="ActionButtons" class="k-pivotgrid-configurator-actions" alignment="end">
                         <button is="Button">Cancel</button>
                         <button is="Button" themeColor="primary">Apply</button>
                     </div>
@@ -263,7 +263,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="k-actions k-actions-end">
+                    <div is="ActionButtons" alignment="end">
                         <button is="Button">Cancel</button>
                         <button is="Button" themeColor="primary">Apply</button>
                     </div>
