--- a/tests/visual/src/misc/pivotgrid-settings-panel-vertical.html
+++ b/tests/visual/src/misc/pivotgrid-settings-panel-vertical.html
@@ -84,7 +84,7 @@
                             <div class="k-settings-description">Select some fields to being setup.</div>
                         </form>
                     </div>
-                    <div class="k-pivotgrid-configurator-actions k-actions k-actions-end">
+                    <div class="k-pivotgrid-configurator-actions" is="ActionButtons" alignment="end">
                         <button is="Button">Cancel</button>
                         <button is="Button" themeColor="primary">Apply</button>
                     </div>
@@ -268,7 +268,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="k-actions k-actions-end">
+                    <div is="ActionButtons" alignment="end">
                         <button is="Button">Cancel</button>
                         <button is="Button" themeColor="primary">Apply</button>
                     </div>
