--- a/tests/visual/src/misc/pivotgrid-settings-top.html
+++ b/tests/visual/src/misc/pivotgrid-settings-top.html
@@ -731,7 +731,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="k-pivotgrid-configurator-actions k-actions k-actions-end">
+                        <div class="k-pivotgrid-configurator-actions" is="ActionButtons" alignment="end">
                             <button is="Button">Cancel</button>
                             <button is="Button" themeColor="primary">Apply</button>
                         </div>
