--- a/tests/visual/src/misc/pivotgrid.html
+++ b/tests/visual/src/misc/pivotgrid.html
@@ -706,7 +706,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="k-pivotgrid-configurator-actions k-actions k-actions-end">
+                        <div is="ActionButtons" alignment="end" class="k-pivotgrid-configurator-actions">
                             <button is="Button">Cancel</button>
                             <button is="Button" themeColor="primary">Apply</button>
                         </div>
