--- a/tests/visual/src/misc/scheduler-edit-dialog.html
+++ b/tests/visual/src/misc/scheduler-edit-dialog.html
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="k-window-buttons k-actions k-actions-end">
+                <div is="ActionButtons" alignment="end" class="k-window-buttons">
                     <button is="Button">Cancel</button>
                     <button is="Button" themeColor="primary">Save</button>
                 </div>
