--- a/tests/visual/src/misc/spreadsheet-filter-menu.html
+++ b/tests/visual/src/misc/spreadsheet-filter-menu.html
@@ -66,7 +66,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="k-actions k-actions-stretched">
+                                <div is="ActionButtons" alignment="stretched">
                                     <button is="Button" themeColor="primary">Apply</button>
                                     <button is="Button">Clear</button>
                                 </div>
