--- a/tests/visual/src/misc/time-selector.html
+++ b/tests/visual/src/misc/time-selector.html
@@ -218,7 +218,7 @@
                                 </kendo-timelist>
                             </div>
                         </div>
-                        <div class="k-time-footer k-actions k-actions-stretched">
+                        <div is="ActionButtons" alignment="stretched" class="k-time-footer">
                             <button is="Button" class="k-time-cancel">Cancel</button>
                             <button is="Button" themeColor="primary" class="k-time-accept">Set</button>
                         </div>
@@ -379,7 +379,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="k-time-footer k-actions k-actions-stretched">
+                        <div is="ActionButtons" alignment="stretched" class="k-time-footer">
                             <button is="Button" class="k-time-cancel">Cancel</button>
                             <button is="Button" themeColor="primary" class="k-time-accept">Set</button>
                         </div>
@@ -441,7 +441,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="k-time-footer k-actions k-actions-stretched">
+                        <div is="ActionButtons" alignment="stretched" class="k-time-footer">
                             <button is="Button" class="k-time-cancel">Cancel</button>
                             <button is="Button" themeColor="primary" class="k-time-accept">Set</button>
                         </div>
