--- a/tests/visual/src/misc/timeline-horizontal.html
+++ b/tests/visual/src/misc/timeline-horizontal.html
@@ -70,7 +70,7 @@
                                             <img class="k-card-image" />
                                         </div>
                                     </div>
-                                    <div class="k-card-actions k-actions">
+                                    <div is="ActionButtons" alignment="start" class="k-card-actions">
                                         <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                                         <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
                                     </div>
