--- a/tests/visual/src/misc/timeline-vertical-alternating.html
+++ b/tests/visual/src/misc/timeline-vertical-alternating.html
@@ -46,7 +46,7 @@
                                         <img class="k-card-image" />
                                     </div>
                                 </div>
-                                <div class="k-card-actions k-actions">
+                                <div is="ActionButtons" class="k-card-actions">
                                     <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                                     <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
                                 </div>
@@ -76,7 +76,7 @@
                                         <img class="k-card-image" />
                                     </div>
                                 </div>
-                                <div class="k-card-actions k-actions">
+                                <div is="ActionButtons" class="k-card-actions">
                                     <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                                     <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
                                 </div>
