--- a/tests/visual/src/misc/upload-rtl.html
+++ b/tests/visual/src/misc/upload-rtl.html
@@ -358,11 +358,11 @@
                         </kendo-upload-file-list-single-item>
                     </li>
                 </ul>
-                <kendo-upload-action-buttons class="k-actions k-actions-end">
+                <div is="ActionButtons" alignment="end">
                     <button is="Button" class="k-clear-selected">Clear</button>
                     <button is="Button" themeColor="primary" class="k-upload-selected">Upload</button>
                 </kendo-upload-action-buttons>
-            </kendo-upload>
+            </div>
         </section>
 
         <section>
