--- a/tests/visual/src/misc/card-layout-horizontal.html
+++ b/tests/visual/src/misc/card-layout-horizontal.html
@@ -25,7 +25,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator k-separator-vertical"></span>
-            <div class="k-card-actions k-actions k-actions-vertical k-actions-start">
+            <div is="ActionButtons" class="k-card-actions" alignment="start" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -38,7 +38,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator k-separator-vertical"></span>
-            <div class="k-card-actions k-actions k-actions-vertical k-actions-center">
+            <div is="ActionButtons" class="k-card-actions" alignment="center" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -51,7 +51,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator k-separator-vertical"></span>
-            <div class="k-card-actions k-actions k-actions-vertical k-actions-end">
+            <div is="ActionButtons" class="k-card-actions" alignment="end" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <span class="k-separator k-separator-vertical"></span>
-            <div class="k-card-actions k-actions k-actions-vertical k-actions-stretched">
+            <div is="ActionButtons" class="k-card-actions" alignment="stretched" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
