--- a/tests/visual/src/misc/card-rtl.html
+++ b/tests/visual/src/misc/card-rtl.html
@@ -25,7 +25,7 @@
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
-            <div class="k-card-actions k-actions k-actions-start">
+            <div is="ActionButtons" class="k-card-actions" alignment="start">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <span class="k-separator k-separator-vertical"></span>
-            <div class="k-card-actions k-actions k-actions-vertical k-actions-stretched">
+            <div is="ActionButtons" class="k-card-actions" alignment="stretched" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -62,7 +62,7 @@
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
                 <span class="k-separator"></span>
-                <div class="k-card-actions k-actions k-actions-stretched">
+                <div is="ActionButtons" class="k-card-actions" alignment="stretched">
                     <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 </div>
                 <div class="k-card-footer">
