--- a/tests/visual/src/misc/card-variants.html
+++ b/tests/visual/src/misc/card-variants.html
@@ -24,7 +24,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions">
+            <div is="ActionButtons" class="k-card-actions">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -36,7 +36,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions">
+            <div is="ActionButtons" class="k-card-actions">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -48,7 +48,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions">
+            <div is="ActionButtons" class="k-card-actions">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -60,7 +60,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions">
+            <div is="ActionButtons" class="k-card-actions">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -72,7 +72,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions">
+            <div is="ActionButtons" class="k-card-actions">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
@@ -84,7 +84,7 @@
                 <h6 class="k-card-subtitle">Card Subtitle</h6>
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="k-card-actions k-actions">
+            <div is="ActionButtons" class="k-card-actions">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
