--- a/tests/visual/src/misc/dialog-action-buttons-react.html
+++ b/tests/visual/src/misc/dialog-action-buttons-react.html
@@ -33,7 +33,8 @@
             <div class="k-window-content k-dialog-content">
                 Action Buttons at start position
             </div>
-            <div class="k-dialog-buttongroup k-actions k-actions-start">
+
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="start">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -49,7 +50,7 @@
             <div class="k-window-content k-dialog-content">
                 Action Buttons at center position
             </div>
-            <div class="k-dialog-buttongroup k-actions k-actions-center">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="center">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -65,7 +66,7 @@
             <div class="k-window-content k-dialog-content">
                 Action Buttons at end position
             </div>
-            <div class="k-dialog-buttongroup k-actions k-actions-end">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -81,7 +82,7 @@
             <div class="k-window-content k-dialog-content">
                 Action Buttons with stretched position
             </div>
-            <div class="k-dialog-buttongroup k-actions k-actions-stretched">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="stretched">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
