--- a/tests/visual/src/misc/dialog-action-buttons.html
+++ b/tests/visual/src/misc/dialog-action-buttons.html
@@ -31,7 +31,7 @@
                 Normal buttons
             </div>
 
-            <div class="k-dialog-buttongroup k-actions k-actions-end">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
 
@@ -53,7 +53,7 @@
             <div class="k-window-content k-dialog-content">
                 Stretched buttons
             </div>
-            <div class="k-dialog-buttongroup k-actions k-actions-stretched">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="stretched">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
 
@@ -81,7 +81,7 @@
                 Narrow Dialog with Stretched button layout
             </div>
 
-            <div class="k-dialog-buttongroup k-actions k-actions-stretched">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="stretched">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -100,7 +100,7 @@
                 Narrow Dialog with Normal button layout
             </div>
 
-             <div class="k-dialog-buttongroup k-actions k-actions-end">
+             <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
@@ -119,7 +119,7 @@
                 Medium Dialog with Stretched button layout
             </div>
 
-            <div class="k-dialog-buttongroup k-actions k-actions-stretched">
+            <div is="ActionButtons" class="k-dialog-buttongroup" alignment="stretched">
                 <button is="Button">Action</button>
                 <button is="Button" themeColor="primary">Primary</button>
             </div>
