--- a/tests/visual/src/misc/filemanager-dialogs.html
+++ b/tests/visual/src/misc/filemanager-dialogs.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="k-dialog-buttongroup k-actions k-actions-end">
+                <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                     <button is="Button">Clear List</button>
                     <button is="Button" themeColor="primary">Done</button>
                 </div>
@@ -55,7 +55,7 @@
                 <div class="k-window-content k-dialog-content k-text-center">
                     <p>Do you want to move or copy?</p>
                 </div>
-                <div class="k-dialog-buttongroup k-actions k-actions-end">
+                <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                     <button is="Button">Move</button>
                     <button is="Button" themeColor="primary">Copy</button>
                 </div>
@@ -75,7 +75,7 @@
                     <p>Are you sure you want to delete this file?</p>
                     <p>You can't undo this action.</p>
                 </div>
-                <div class="k-dialog-buttongroup k-actions k-actions-end">
+                <div is="ActionButtons" class="k-dialog-buttongroup" alignment="end">
                     <button is="Button">Cancel</button>
                     <button is="Button" themeColor="primary">Delete</button>
                 </div>
