--- a/tests/visual/src/misc/grid-column-menu.html
+++ b/tests/visual/src/misc/grid-column-menu.html
@@ -102,7 +102,7 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="k-actions k-actions-stretched">
+                                <div is="ActionButtons" alignment="stretched">
                                     <button is="Button">Reset</button>
                                     <button is="Button" themeColor="primary">Apply</button>
                                 </div>
@@ -181,7 +181,7 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="k-actions k-actions-stretched">
+                                <div is="ActionButtons" alignment="stretched">
                                     <button is="Button">Reset</button>
                                     <button is="Button" themeColor="primary">Apply</button>
                                 </div>
@@ -311,7 +311,7 @@
                                         <input is="DropdownList" value="And" class="k-filter-and" />
                                         <input is="DropdownList" value="Contains" />
                                         <input is="Textbox" placeholder="Filter..." />
-                                        <div class="k-actions k-actions-stretched">
+                                        <div is="ActionButtons" alignment="stretched">
                                             <button is="Button">Clear</button>
                                             <button is="Button" themeColor="primary">Filter</button>
                                         </div>
@@ -376,7 +376,7 @@
                                             <li class="k-item"><label class="k-label k-checkbox-label"><input is="Checkbox" /><span>Aniseed Syrup Aniseed Syrup Aniseed Syrup Aniseed Syrup </span></label></li>
                                         </ul>
                                         <div class="k-filter-selected-items">0 selected items</div>
-                                        <div class="k-actions k-actions-stretched">
+                                        <div is="ActionButtons" alignment="stretched">
                                             <button is="Button">Clear</button>
                                             <button is="Button" themeColor="primary">Filter</button>
                                         </div>
