--- a/tests/visual/src/misc/grid-filter-menu.html
+++ b/tests/visual/src/misc/grid-filter-menu.html
@@ -39,7 +39,7 @@
                         <input is="DropdownList" value="And" class="k-filter-and" />
                         <input is="DropdownList" value="Is equal to" />
                         <input is="NumericTextbox" />
-                        <div class="k-actions k-actions-stretched">
+                        <div is="ActionButtons" alignment="stretched">
                             <button is="Button">Clear</button>
                             <button is="Button" themeColor="primary">Filter</button>
                         </div>
@@ -70,7 +70,7 @@
                                             </kendo-grid-filter-menu-input-wrapper>
                                         </kendo-grid-date-filter-menu-input>
                                 </kendo-grid-date-filter-menu>
-                                <div class="k-actions k-actions-stretched">
+                                <div is="ActionButtons" alignment="stretched">
                                     <button is="Button">Clear</button>
                                     <button is="Button" themeColor="primary">Filter</button>
                                 </div>
@@ -97,7 +97,7 @@
                                     </kendo-grid-string-filter-menu-input>
                                 </kendo-grid-string-filter-menu>
                                 <input is="Switch" />
-                                <div class="k-actions k-actions-stretched">
+                                <div is="ActionButtons" alignment="stretched">
                                     <button is="Button">Clear</button>
                                     <button is="Button" themeColor="primary">Filter</button>
                                 </div>
