--- a/tests/visual/src/misc/pivotgrid-column-menus.html
+++ b/tests/visual/src/misc/pivotgrid-column-menus.html
@@ -134,7 +134,7 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="k-actions k-actions-stretched">
+                                    <div is="ActionButtons" alignment="stretched">
                                         <button is="Button">Reset</button>
                                         <button is="Button" themeColor="primary">Apply</button>
                                     </div>
@@ -200,7 +200,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="k-actions k-actions-stretched">
+                                    <div is="ActionButtons" alignment="stretched">
                                         <button is="Button">Reset</button>
                                         <button is="Button" themeColor="primary">Apply</button>
                                     </div>
@@ -262,7 +262,7 @@
                                                         <input is="DropdownList" value="And" class="k-filter-and" />
                                                         <input is="DropdownList" value="Contains" />
                                                         <input is="Textbox" />
-                                                        <div class="k-actions k-actions-stretched">
+                                                        <div is="ActionButtons" alignment="stretched">
                                                             <button is="Button">Clear</button>
                                                             <button is="Button" themeColor="primary">Filter</button>
                                                         </div>
