--- a/tests/visual/src/misc/spreadsheet-dialogs.html
+++ b/tests/visual/src/misc/spreadsheet-dialogs.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="k-window-buttons k-actions k-actions-end">
+                <div is="ActionButtons" alignment="end" class="k-window-buttons">
                     <button is="Button">Cancel</button>
                     <button is="Button" themeColor="primary">Insert</button>
                 </div>
@@ -64,7 +64,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="k-window-buttons k-actions k-actions-end">
+                <div is="ActionButtons" alignment="end" class="k-window-buttons">
                     <button is="Button">Cancel</button>
                     <button is="Button" themeColor="primary">Insert</button>
                 </div>
