--- a/tests/visual/src/misc/taskboard-pane.html
+++ b/tests/visual/src/misc/taskboard-pane.html
@@ -128,7 +128,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="k-taskboard-pane-actions k-actions k-actions-end">
+                <div is="ActionButtons" alignment="end" class="k-taskboard-pane-actions">
                     <button is="Button" icon="trash">Delete</button>
                     <button is="Button" themeColor="primary" icon="edit">Edit</button>
                 </div>
@@ -249,7 +249,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="k-taskboard-pane-actions k-actions k-actions-end">
+                <div is="ActionButtons" alignment="end" class="k-taskboard-pane-actions">
                     <button is="Button" icon="trash">Delete</button>
                     <button is="Button" themeColor="primary" icon="edit">Edit</button>
                 </div>
