--- a/tests/visual/src/misc/upload-angular.html
+++ b/tests/visual/src/misc/upload-angular.html
@@ -311,10 +311,10 @@
                         </kendo-upload-file-list-single-item>
                     </li>
                 </ul>
-                <kendo-upload-action-buttons class="k-actions k-actions-end">
+                <div is="ActionButtons" alignment="end">
                     <button is="Button" class="k-clear-selected">Clear</button>
                     <button is="Button" themeColor="primary" class="k-upload-selected">Upload</button>
-                </kendo-upload-action-buttons>
+                </div>
             </kendo-upload>
         </section>
 
