--- a/tests/visual/src/misc/upload.html
+++ b/tests/visual/src/misc/upload.html
@@ -189,7 +189,7 @@
                         </strong>
                     </li>
                 </ul>
-                <div class="k-actions k-actions-end">
+                <div is="ActionButtons" alignment="end">
                     <button is="Button" class="k-clear-selected">Clear</button>
                     <button is="Button" themeColor="primary" class="k-upload-selected">Upload</button>
                 </div>
