--- a/tests/visual/src/misc/window-action-buttons-react.html
+++ b/tests/visual/src/misc/window-action-buttons-react.html
@@ -35,7 +35,7 @@
             <div class="k-window-content">
                 Action Buttons at start position
             </div>
-            <div class="k-window-buttons k-actions k-actions-start">
+            <div is="ActionButtons" alignment="start" class="k-window-buttons">
                 <button is="Button">Cancel</button>
                 <button is="Button" themeColor="primary">Submit</button>
             </div>
@@ -53,7 +53,7 @@
             <div class="k-window-content">
                 Action Buttons at center position
             </div>
-            <div class="k-window-buttons k-actions k-actions-center">
+            <div is="ActionButtons" alignment="center" class="k-window-buttons">
                 <button is="Button">Cancel</button>
                 <button is="Button" themeColor="primary">Submit</button>
             </div>
@@ -71,7 +71,7 @@
             <div class="k-window-content">
                 Action Buttons at end position
             </div>
-            <div class="k-window-buttons k-actions k-actions-end">
+            <div is="ActionButtons" alignment="end" class="k-window-buttons">
                 <button is="Button">Cancel</button>
                 <button is="Button" themeColor="primary">Submit</button>
             </div>
@@ -89,7 +89,7 @@
             <div class="k-window-content">
                 Action Buttons with stretched position
             </div>
-            <div class="k-window-buttons k-actions k-actions-stretched">
+            <div is="ActionButtons" alignment="stretched" class="k-window-buttons">
                 <button is="Button">Cancel</button>
                 <button is="Button" themeColor="primary">Submit</button>
             </div>
