--- a/tests/visual/src/misc/chat-rtl.html
+++ b/tests/visual/src/misc/chat-rtl.html
@@ -30,9 +30,9 @@
                             </div>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    How can I help you?
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->How can I help you?<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
@@ -43,9 +43,9 @@
                             </div>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    How can I help you?
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->How can I help you?<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
