--- a/tests/visual/src/misc/chat-scrollable-deck.html
+++ b/tests/visual/src/misc/chat-scrollable-deck.html
@@ -30,9 +30,9 @@
                             </div>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    Message before card deck
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->Message before card deck<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
