--- a/tests/visual/src/misc/chat.html
+++ b/tests/visual/src/misc/chat.html
@@ -33,9 +33,9 @@
                             </div>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    How can I help you?
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->How can I help you?<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
@@ -46,9 +46,9 @@
                             </div>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    How can I help you?
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->How can I help you?<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
@@ -125,9 +125,9 @@
                             <p class="k-author">Bruv</p>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    How can I help you?
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->How can I help you?<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
@@ -135,9 +135,9 @@
                             <p class="k-author">Bruv</p>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    How can I help you?
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->How can I help you?<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
@@ -145,10 +145,10 @@
                             <p class="k-author">Bruv</p>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    Very long message text that tests message overflowing behavior.
-                                    Very long message text that tests message overflowing behavior.
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->Very long message text that tests message overflowing behavior.<!--
+                                    -->Very long message text that tests message overflowing behavior.<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
@@ -156,9 +156,9 @@
                             <p class="k-author">Bruv</p>
                             <div class="k-message k-only">
                                 <time class="k-message-time">Thu Feb 08 2018</time>
-                                <div class="k-bubble">
-                                    Unusually_long_word_that_tests_word_break_behavior__unusually_long_word_that_tests_word_break_behavior
-                                </div>
+                                <div class="k-bubble"><!--
+                                    -->Unusually_long_word_that_tests_word_break_behavior__unusually_long_word_that_tests_word_break_behavior<!--
+                                --></div>
                                 <span class="k-message-status">Seen</span>
                             </div>
                         </div>
